--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.11",
+    "antd": "^5.24.3",
     "axios": "^1.8.1",
     "lodash.debounce": "^4.0.8",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0"
   },
