--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.11",
     "axios": "^1.8.1",
     "lodash.debounce": "^4.0.8",
+    "motion": "^12.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
