--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "eslint.config.js", "tsconfig.json", "tsconfig.app.json", "tsconfig.app.json", "tsconfig.json", "tsconfig.node.json", "eslint.config.js"]
 }
